# learning-haskell

./: 01-ST.hs  01-inventory-checker.hs  01-nub.hs  01-typeclasses.hs  02-intsets.hs  02-monoids.hs  02-rope-walker.hs  02-tupler.hs  03-analyze-text.hs  03-functors.hs  03-input.txt  03-intersect.hs  03-parsing.hs  03-reifier.hs  04-GaussIntegers.hs  04-expr-compl.hs  04-qq.hs  05-gnumer.hs  05-polynomials.hs  05-taylor.hs  06-maybe-parser.hs  06-queue.hs  4_8.txt  4_9.txt  BullsNCows.hs  Coordinates.hs  FileGen.hs  IP-analyzer.hs  ParseNumbers.hs  Parser.hs  README.md  Reporter.hs  StudDB.hs  TextProc.hs  count.hs  hosts.txt  in.txt  stud.txt  task1.hs  task2.hs  (+6 more)
03-examples/: process3.hs
04-number-cruncher/: number-cruncher.hs
examples/: typefamilies.hs
lab01/: README.md  task1.hs  task2.hs  task3.hs  task4.hs
lab02/: README.md  task3.hs  task5-folds.hs  task7-extra.hs
lab03/: task2-Logic3.hs
lab04/: BullsNCows.hs  Coordinates.hs  FileGen.hs  IP-analyzer.hs  README.md  TextProc.hs  hosts.txt  random.txt
lab05/: 04-matrices.hs  README.md  kapitan.txt  num2.txt  numbers.txt  script.max
lab06/: 02-monoids.hs  05-totalLength.hs  06-reduce.hs  07-maxapp.hs
lab07/: 01-inventory-checker.hs  02-rope-walker.hs  06-queue.hs
lab08/: 01-float_complex.hs  02-url.hs  03-full-par-expr.hs  05-polynomials.hs  06-maybe-parser.hs  ParseNumbers.hs  README.md  SimpleParsers.hs
lab09/: 01-ST.hs  02-password.hs  03-polish-calc.hs  04-dirgen.hs  05-wolf-goat-cabbage-puzzle.hs  README.md  count.hs  (+1 more)
lab2/: lab2.cabal
lab2/src/: Task2.hs  Task3.hs
lab2/test/: Spec.hs
(+39 files in other folders)
